--- a/src/js/components/racks.css
+++ b/src/js/components/racks.css
@@ -5,6 +5,7 @@
     padding-left: 6px;
 }
 .my-shelf-rack h5 {
+    font-size:1.2em;
     min-width: 96px;
     margin: 0 auto 4px auto;
     padding: 1px 8px 1px 8px;
@@ -25,7 +26,7 @@
     position: absolute;
     top: -1px;
     left: 0;
-    width: 110px;
+    width: 100%;
     height: 2px;
     content: "";
     background-color: #62c8f3
@@ -34,7 +35,7 @@
     position: absolute;
     bottom: -1px;
     left: 0;
-    width: 110px;
+    width: 100%;
     height: 2px;
     content: "";
     background-color: #62c8f3
@@ -42,7 +43,7 @@
 
 .my-shelf-folder {
     position: relative;
-    font-size: 12px;
+    font-size: 1em;
 
     padding: 3px 2px 3px 6px;
 
@@ -53,7 +54,7 @@
     position: absolute;
     top: -1px;
     left: 0;
-    width: 110px;
+    width: 100%;
     height: 2px;
     content: "";
     background-color: #62c8f3
@@ -62,7 +63,7 @@
     position: absolute;
     bottom: -1px;
     left: 0;
-    width: 110px;
+    width: 100%;
     height: 2px;
     content: "";
     background-color: #62c8f3
@@ -70,11 +71,10 @@
 .my-shelf-folder a {
     display: flex;
     flex-flow: row nowrap;
-
     -webkit-user-select: none;
 }
 .my-shelf-folder i {
-    font-size: 12px;
+    font-size: 1.2em;
     margin-right: 3px;
 }
 .my-shelf-folder-name {
